--- a/fronthand/src/style/LoginStyle.css
+++ b/fronthand/src/style/LoginStyle.css
@@ -1,66 +1,53 @@
-
 * {
-    margin: 0;
-    padding: 0;
-
+  margin: 0;
+  padding: 0;
 }
 
-
-
-.Login-Register{
-    width: 100%;
-    height: 100vh;
+.Login-Register {
+  width: 100%;
+  height: 100vh;
 }
 
-
-.userfield{
-    color: aliceblue !important;
-    
+.userfield {
+  color: aliceblue !important;
 }
-.userfield:focus, input:focus {
-    color: aliceblue !important;
-}
-
-
-.Passwordfield{
-    color: aliceblue !important;
-    
-}
-.Passwordfield:focus, input:focus {
-    color: aliceblue !important;
+.userfield:focus,
+input:focus {
+  color: aliceblue !important;
 }
 
+.Passwordfield {
+  color: aliceblue !important;
+}
+.Passwordfield:focus,
+input:focus {
+  color: aliceblue !important;
+}
 
 .login-register {
-    width: 220px;
-    margin: 35px auto;
-    position: relative;
-    box-shadow: 0 0 20px 9px #ff61241f;
-    border-radius: 30px;
-  }
-  
-  .toggle-btn {
-    padding: 10px 30px;
-    cursor: pointer;
-    background: transparent;
-    border: 0;
-    outline: none;
-    position: relative;
-  }
-  
-  
-  
-  .btns {
-    top: 0;
-    left: 0;
-    position: absolute;
-    width: 110px;
-    height: 100%;
-    background: linear-gradient(to right, #fff710, #06ff51);
-    border-radius: 30px;
-    transition: .5s;
-  }
-  
-  
-  
+  width: 220px;
+  margin: 35px auto;
+  position: relative;
+  box-shadow: 0 0 20px 9px #ff61241f;
+  border-radius: 30px;
+}
 
+.toggle-btn {
+  padding: 10px 30px;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  outline: none;
+  position: relative;
+}
+
+.btns {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 110px;
+  height: 100%;
+  background: linear-gradient(to right, #fff710, #06ff51);
+  border-radius: 30px;
+  transition: 0.5s;
+}
